# shoes_store_api

./: .envtemplate  .gitignore  Makefile  README.md  docker-compose-template.yml  pyproject.toml
core/: settings.py  urls.py
shoes_store_api/: admin.py  apps.py  models.py  serializers.py  views.py
shoes_store_api/migrations/: 0001_initial.py  0002_rename_type_shoe_shoe_type_and_more.py  0003_remove_shoetype_atribute_shoetype_atribute.py  0004_rename_shoe_type_shoetype_name.py  0005_rename_atribute_shoetype_attribute.py  0006_rename_attribute_attributes_and_more.py  0007_rename_color_attributes_description_and_more.py  0008_remove_shoetype_attributes_shoetype_attributes.py
shoes_store_api/tests/: conftest.py  test_shoe_type_upsert.py
